# Multifungible-library

./: .gitignore  CMakeLists.txt  README.md  dllheader.h  install.sh  install_macos.sh  installgtest.sh  linux-compile-cli.sh  linux-compile-gtests.sh  linux-compile.sh  macos-compile-cli.sh  macos-compile-gtests.sh  macos-compile.sh  mainMultifungible.cpp  main_cli.cpp  methodsDLL.cpp  windows-compile-cli.bat  windows-compile-gtests.bat  windows-compile.bat  windows-install.bat
AddressGen/: AddressGenerator.c  AddressGenerator.h  ElrondAddressGenerator.c  ElrondAddressGenerator.h  util.c  util.h  winglue.h
examples/C/Linux/: config.toml  main.c  run.sh
examples/C/Windows/: main.c  run.bat
examples/Python/: TokenIssuance-multiplatform.py  config.toml
examples/Python/Linux/: main.py
include/: IPrivateKeyIO.h  Multifungible.h  UnitTests.h  Wallet.h  WalletProvider.h  WrapperKeyFile.h  WrapperProxyProvider.h  WrapperTransactionFactory.h  cliconfig.h
include/UnitTesting/: UnitTestsInfo.h
include/transaction/: esdt.h
src/: Multifungible.cpp  UnitTests.cpp  Wallet.cpp  WalletProvider.cpp  WrapperKeyFile.cpp  WrapperProxyProvider.cpp  WrapperTransactionFactory.cpp  cliconfig.cpp
src/UnitTesting/: AddQuantityTests.cpp  AddRolesTests.cpp  AddURIVerification.cpp  BurnQuantityTests.cpp  IssueNFTCollectionTests.cpp  IssueNFTTokenTests.cpp  IssueSFTCollectionTests.cpp  IssueSFTTokenTests.cpp  PauseUnpauseTransactionsTests.cpp  RemoveRolesTests.cpp  TokenDecoderTests.cpp  TransferCreationRoles.cpp  TransferTokenRoles.cpp  UpdatePropertiesTests.cpp  UpgradeAttributesTests.cpp  WalletGeneratorTests.cpp  WipeFreezeUnfreeze.cpp  buildProofOfOwnershipOfKeyPair.cpp  getAddressTokenBalanceTest.cpp  getCollectionPropertiesTests.cpp  getEmittedCollectionsTest.cpp  getIssuerAddressTest.cpp  getOwnedTokenPropertiesTests.cpp  getOwnedTokensTests.cpp  getRolesAndAddressesTests.cpp  getTokenPropertiesTests.cpp  issueESDTTest.cpp  multiTransferTests.cpp  stopCreationTests.cpp  transferEGLDTests.cpp  transferESDTTests.cpp  transferOwnershipTests.cpp  transferSFTTests.cpp  upgradePropertiesTests.cpp
src/transaction/: esdt.cpp  payload_builder.cpp
src/utils/: common.h
src/wrappers/: httpwrapper.h  httpwrapper.h.bak
tests/: MULTIFUNGIBLE_AUXILLIARYWALLET.json  MULTIFUNGIBLE_CREATION_WALLET.json  MULTIFUNGIBLE_FREEZEUNFREEZEWIPE.json  MULTIFUNGIBLE_GETEMITTEDCOLLECTIONS.json  MULTIFUNGIBLE_MAINWALLET.json  MULTIFUNGIBLE_PROOFOFOWNERSHIP.json  MULTIFUNGIBLE_WALLET_NOMONEY.json  MULTIFUNGIBLE_WALLET_NOTINBLOCKCHAIN.json  MULTIFUNGIBLE_WALLET_TRANSACTION_RECEIVER.json  config.toml  createNewAccountTest.json  createWallet.json  retrieveSecretKeyTestNoPassword.json  verifySignatureTest.json  walletaddresses.txt
tests/testData/: sign_sha3.py
tests/test_common/: test_common.h
tests/test_integration/test_proxyprovider/: test_proxyprovider.cpp
tests/test_integration/test_wrappers/: test_wrapper_client.cpp
tests/test_src/test_account/: test_account.cpp
tests/test_src/test_canonical_path/: test_canonical_path.cpp
tests/test_src/test_filehandler/: test_filehandler.cpp
tests/test_src/test_internal/: test_internal.cpp
tests/test_src/test_provider/: test_apiresponse.cpp  test_data_transaction.cpp
tests/test_src/test_smart_contracts/: test_smart_contracts.cpp
tests/test_src/test_transaction/: test_esdt.cpp  test_gas_estimator.cpp  test_message_signer.cpp  test_payload_builder.cpp  test_signer.cpp  test_token_payment.cpp  test_transaction.cpp  test_transaction_factory.cpp
tests/test_src/test_utils/: test_utils.cpp
tests/test_src/test_wrappers/: test_wrappers.cpp
